2013-02-02 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.[c|h]: further optimizing code avoiding to
    allocate a TclWebRequest structure on every request. This structure
    is allocate when the interpreter is initialized and a pointer
    stored in rivet globals
    * src/rivetcmd/rivetInspect.c: impoved consistence if Tcl objects handling

2014-01-30 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: this ChangeLog entry is meant to amend the
    2014-01-27 entry that missed to point out as small still important change
    in mod_rivet.c. Rivet_SendContent is not calling Tcl anymore to coax 
    command 'info script' to return the current Rivet script full path. This
    will soon be solved by adding a new functionality to command '::rivet::inspect' 
    
2014-01-27 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/apache_config.[c|h]: new file with Apache module configuration
    procedures moved here from mod_rivet.c. This code is likely to be Apache 2.x
    but totally independent from the running MPM. Therefore it was moved here
    to improved size and manageability of mod_rivet.c
    * src/apache-2/mod_rivet.c: The module central code, from which configuration
    handling procedures were removed

2014-01-08 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/aida.tcl: adding aida.tcl experimental file
    for a DIO compatible interface to TDBC. 
    * rivet/packages/dio/sql.tcl: now able to produce same basic SQL queries
    ::DIO::Database class is doing now

2013-12-19 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/dio_Postgresql.tcl: reindented and tabs converted to spaces
    * rivet/packages/dio/sql.tcl: class DIO::Sql now returning basic SELECT SQL statements

2013-12-18 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/dio/sql.tcl: further developments. Class Sql is now able
    to build an abstract representation of a SELECT query